
CHANGELOG

---- ---- ---- ---- ---- ---- ---- ---- ---- ---- 
Format:
<tanggal dan waktu> - <pengubah>
<jenis ubahan>
<apa saja yang diubah>
---- ---- ---- ---- ---- ---- ---- ---- ---- ---- 

4/11/2014 23:24 - dummy
Tes Changelog
* Membuat file changelog.txt
* Membuat file readme.txt
* Tidur

5/11/2014 21:44 - feryandi
Login System
* Menambahkan file auth.c pada module
* Merubah driver.c
* Register
  Gunakan fungsi registerUser(<nama_user>), fungsi ini akan
  mengeluarkan boolean
* Login
  Gunakan fungsi loginUser(<nama_user>), fungsi ini akan
  mengeluarkan boolean
  
6/11/2014 23:15 - feryandi
Dictionary!
* import seluruh kata ke kamus menggunakan: 
			getDictionary(TabKamus (*T))
* cari tahu apakah ada kata tersebut dalam kamus menggunakan:
			isOnKamus (char word[18], TabKamus X) -> boolean