@@ -1,0 +1,37 @@
+#include <stdio.h>
+#include "boolean.h"
+#include "queue.c"
+
+int main() {
+    Queue Antrian;
+    int i;
+    infoqueue X;
+
+    CreateEmptyQ(&Antrian, 10);
+
+   /* Add(&Antrian,12);
+    Add(&Antrian,19);
+    Add(&Antrian,6);
+    Add(&Antrian,8);
+    Add(&Antrian,7);
+    Add(&Antrian,2);
+    Add(&Antrian,12);
+    Add(&Antrian,23);
+    Add(&Antrian,99);
+    Add(&Antrian,10);
+    Del(&Antrian,&X);
+    Del(&Antrian,&X);
+    Add(&Antrian,25);
+    Add(&Antrian,21);
+
+    WriteQueue(Antrian);
+    printf("\n");
+    TulisQueue(Antrian);*/
+    //for ( i = 1; i<=5; i++) {
+       // printf("\nhead: %d\n", InfoHead(Antrian));
+       // printf("tail: %d", InfoTail(Antrian));
+    //}
+
+    return 0;
+}
+
