@@ -31,3 +31,11 @@ Dictionary!
 			getDictionary(TabKamus (*T))
 * cari tahu apakah ada kata tersebut dalam kamus menggunakan:
 			isOnKamus (char word[18], TabKamus X) -> boolean
+
+7/11/2014 23:07 - feryandi
+Stack Overflow!
+* Fixed: stack overflow, sekarang seluruh fungsi/prosedur di dict.c
+	 tidak memerlukan inputan file kamus, karena variable kamus
+	 telah dijadikan variabel global yang bisa dipakai kapanpun
+	 dan dimanapun selama telah diinisiasi getDirectory(K);
+* RELEASE: driverword.c - ver. alpha 0.1
